// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`poll toggle (flag) should match snapshot (default) 1`] = `
<button
  className="c-icon-button qa-toggle-flag "
  onClick={[Function]}
>
  <i
    className="far fa-flag"
  />
</button>
`;

exports[`poll toggle (flag) should match snapshot (toggled) 1`] = `
<button
  className="c-icon-button qa-toggle-flag "
  onClick={[Function]}
>
  <i
    className="fas fa-flag"
  />
</button>
`;

exports[`poll toggle (flag) should match snapshot (util) 1`] = `
<button
  className="c-icon-button qa-toggle-flag u-whatever"
  onClick={[Function]}
>
  <i
    className="far fa-flag"
  />
</button>
`;

exports[`poll toggle (hide) should match snapshot (default) 1`] = `
<button
  className="c-icon-button qa-toggle-hide "
  onClick={[Function]}
>
  <i
    className="far fa-eye"
  />
</button>
`;

exports[`poll toggle (hide) should match snapshot (toggled) 1`] = `
<button
  className="c-icon-button qa-toggle-hide "
  onClick={[Function]}
>
  <i
    className="far fa-eye-slash"
  />
</button>
`;

exports[`poll toggle (hide) should match snapshot (util) 1`] = `
<button
  className="c-icon-button qa-toggle-hide u-whatever"
  onClick={[Function]}
>
  <i
    className="far fa-eye"
  />
</button>
`;
